--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "root",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@mds/mds-core",
+  "version": "0.1.0",
   "workspaces": [
     "aws-lambda/*",
     "packages/*"
