--- a/aws-lambda/api-gateway-authorizer/package.json
+++ b/aws-lambda/api-gateway-authorizer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-lambda/api-gateway-authorizer",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "description": "Authorizer for API Gateway",
   "main": "dist/index.js",
@@ -18,8 +18,8 @@
   ],
   "author": "City of Los Angeles",
   "dependencies": {
-    "jsonwebtoken": "8.5.1",
-    "@mds/mds-api-authorizer": "0.1.3"
+    "@mds/mds-api-authorizer": "^0.1.4",
+    "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.30",
