--- a/aws-lambda/aws-serverless-express-handler/package.json
+++ b/aws-lambda/aws-serverless-express-handler/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-lambda/aws-serverless-express-handler",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "description": "Handler for AWS Serverless Express (AWS Lambda)",
   "main": "dist/index.js",
@@ -17,10 +17,10 @@
   ],
   "author": "City of Los Angeles",
   "dependencies": {
-    "@aws-lambda/api-gateway-authorizer": "0.1.3",
-    "@aws-lambda/aws-utils": "0.1.3",
-    "aws-serverless-express": "3.3.6",
-    "@mds/mds-api-server": "0.1.3"
+    "@aws-lambda/api-gateway-authorizer": "^0.1.4",
+    "@aws-lambda/aws-utils": "^0.1.4",
+    "@mds/mds-api-server": "^0.1.4",
+    "aws-serverless-express": "3.3.6"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.30",
