--- a/aws-lambda/mds-agency/package.json
+++ b/aws-lambda/mds-agency/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-lambda/mds-agency",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "description": "AWS Lambda for MDS Agency API",
   "main": "dist/index.js",
@@ -23,9 +23,9 @@
   ],
   "author": "City of Los Angeles",
   "dependencies": {
-    "@aws-lambda/aws-serverless-express-handler": "0.1.3",
-    "@mds/mds-agency": "0.0.5",
-    "@mds/mds-api-server": "0.1.3"
+    "@aws-lambda/aws-serverless-express-handler": "^0.1.4",
+    "@mds/mds-agency": "^0.0.6",
+    "@mds/mds-api-server": "^0.1.4"
   },
   "license": "Apache-2.0"
 }
