--- a/aws-lambda/mds-metrics-sheet/package.json
+++ b/aws-lambda/mds-metrics-sheet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-lambda/mds-metrics-sheet",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": true,
   "description": "AWS Lambda for MDS Metrics Sheet",
   "main": "dist/index.js",
@@ -19,7 +19,7 @@
   ],
   "author": "City of Los Angeles",
   "dependencies": {
-    "@mds/mds-metrics-sheet": "0.0.4"
+    "@mds/mds-metrics-sheet": "^0.0.5"
   },
   "license": "Apache-2.0"
 }
