--- a/aws-lambda/mds-native/package.json
+++ b/aws-lambda/mds-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-lambda/mds-native",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "description": "AWS Lambda for MDS Native API",
   "main": "dist/index.js",
@@ -23,9 +23,9 @@
   ],
   "author": "City of Los Angeles",
   "dependencies": {
-    "@aws-lambda/aws-serverless-express-handler": "0.1.3",
-    "@mds/mds-api-server": "0.1.3",
-    "@mds/mds-native": "0.0.1"
+    "@aws-lambda/aws-serverless-express-handler": "^0.1.4",
+    "@mds/mds-api-server": "^0.1.4",
+    "@mds/mds-native": "^0.0.2"
   },
   "license": "Apache-2.0"
 }
