--- a/aws-lambda/mds-policy/package.json
+++ b/aws-lambda/mds-policy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-lambda/mds-policy",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "description": "AWS Lambda for MDS Policy API",
   "main": "dist/index.js",
@@ -23,9 +23,9 @@
   ],
   "author": "City of Los Angeles",
   "dependencies": {
-    "@aws-lambda/aws-serverless-express-handler": "0.1.3",
-    "@mds/mds-api-server": "0.1.3",
-    "@mds/mds-policy": "0.0.4"
+    "@aws-lambda/aws-serverless-express-handler": "^0.1.4",
+    "@mds/mds-api-server": "^0.1.4",
+    "@mds/mds-policy": "^0.0.5"
   },
   "license": "Apache-2.0"
 }
