--- a/packages/mds-api-authorizer/package.json
+++ b/packages/mds-api-authorizer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mds/mds-api-authorizer",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "MDS API Authorizer",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,11 +16,11 @@
   ],
   "author": "City of Los Angeles",
   "dependencies": {
-    "jwt-decode": "2.2.0",
-    "@mds/mds-types": "0.1.0"
+    "@mds/mds-types": "^0.1.1",
+    "jwt-decode": "2.2.0"
   },
   "devDependencies": {
-    "@mds/mds-test-data": "0.1.3"
+    "@mds/mds-test-data": "^0.1.4"
   },
   "license": "Apache-2.0"
 }
