--- a/packages/mds-api-helpers/package.json
+++ b/packages/mds-api-helpers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mds/mds-api-helpers",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Mobility Data Specification helper functions",
   "keywords": [
     "mds",
@@ -9,11 +9,11 @@
   "author": "City of Los Angeles",
   "license": "Apache-2.0",
   "dependencies": {
-    "express": "4.17.1",
-    "@mds/mds-cache": "0.1.3",
-    "@mds/mds-db": "0.1.3",
-    "@mds/mds-types": "0.1.0",
-    "@mds/mds-utils": "0.1.3"
+    "@mds/mds-cache": "^0.1.4",
+    "@mds/mds-db": "^0.1.4",
+    "@mds/mds-types": "^0.1.1",
+    "@mds/mds-utils": "^0.1.4",
+    "express": "4.17.1"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
