--- a/packages/mds-cache/package.json
+++ b/packages/mds-cache/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mds/mds-cache",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Mobility Data Specification cache interface",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,11 +11,11 @@
   "author": "City of Los Angeles",
   "license": "ISC",
   "dependencies": {
+    "@mds/mds-logger": "^0.1.4",
+    "@mds/mds-types": "^0.1.1",
+    "@mds/mds-utils": "^0.1.4",
     "bluebird": "3.5.5",
     "flat": "4.1.0",
-    "@mds/mds-logger": "0.1.3",
-    "@mds/mds-types": "0.1.0",
-    "@mds/mds-utils": "0.1.3",
     "redis": "2.8.0"
   },
   "scripts": {
