--- a/packages/mds-compliance/package.json
+++ b/packages/mds-compliance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mds/mds-compliance",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "MDS Compliance Tool",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,23 +22,23 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@hapi/joi": "15.1.0",
+    "@mds/mds-api-server": "^0.1.4",
+    "@mds/mds-cache": "^0.1.4",
+    "@mds/mds-db": "^0.1.4",
+    "@mds/mds-logger": "^0.1.4",
+    "@mds/mds-stream": "^0.1.4",
+    "@mds/mds-types": "^0.1.1",
+    "@mds/mds-utils": "^0.1.4",
     "express": "4.17.1",
     "fs": "0.0.1-security",
-    "@mds/mds-api-server": "0.1.3",
-    "@mds/mds-cache": "0.1.3",
-    "@mds/mds-db": "0.1.3",
-    "@mds/mds-logger": "0.1.3",
-    "@mds/mds-stream": "0.1.3",
-    "@mds/mds-types": "0.1.0",
-    "@mds/mds-utils": "0.1.3",
     "moment-timezone": "0.5.26",
     "uuid4": "1.1.4",
     "yargs": "13.3.0"
   },
   "devDependencies": {
-    "@mds/mds-agency": "0.0.5",
-    "@mds/mds-policy": "0.0.4",
-    "@mds/mds-provider": "1.0.3",
-    "@mds/mds-test-data": "0.1.3"
+    "@mds/mds-agency": "^0.0.6",
+    "@mds/mds-policy": "^0.0.5",
+    "@mds/mds-provider": "^1.0.4",
+    "@mds/mds-test-data": "^0.1.4"
   }
 }
