--- a/packages/mds-daily/package.json
+++ b/packages/mds-daily/package.json
@@ -1,24 +1,24 @@
 {
   "name": "@mds/mds-daily",
   "description": "MDS Daily Reporting API",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "author": "City of Los Angeles",
   "licence": "Apache-2.0",
   "dependencies": {
+    "@mds/mds-api-server": "^0.1.4",
+    "@mds/mds-cache": "^0.1.4",
+    "@mds/mds-db": "^0.1.4",
+    "@mds/mds-logger": "^0.1.4",
+    "@mds/mds-providers": "^0.1.4",
+    "@mds/mds-stream": "^0.1.4",
+    "@mds/mds-types": "^0.1.1",
+    "@mds/mds-utils": "^0.1.4",
     "express": "4.17.1",
     "ladot-service-areas": "0.1.3",
-    "@mds/mds-api-server": "0.1.3",
-    "@mds/mds-cache": "0.1.3",
-    "@mds/mds-db": "0.1.3",
-    "@mds/mds-logger": "0.1.3",
-    "@mds/mds-providers": "0.1.3",
-    "@mds/mds-stream": "0.1.3",
-    "@mds/mds-types": "0.1.0",
-    "@mds/mds-utils": "0.1.3",
     "uuid": "3.3.2"
   },
   "devDependencies": {
-    "@mds/mds-test-data": "0.1.3"
+    "@mds/mds-test-data": "^0.1.4"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
