--- a/packages/mds-metrics-sheet/package.json
+++ b/packages/mds-metrics-sheet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mds/mds-metrics-sheet",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Automate reporting api insert into LADOT compliance spreadsheet",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,11 +14,11 @@
   "author": "City of Los Angeles",
   "license": "Apache-2.0",
   "dependencies": {
+    "@mds/mds-logger": "^0.1.4",
+    "@mds/mds-providers": "^0.1.4",
+    "@mds/mds-types": "^0.1.1",
     "dotenv": "8.0.0",
     "google-spreadsheet": "2.0.7",
-    "@mds/mds-logger": "0.1.3",
-    "@mds/mds-providers": "0.1.3",
-    "@mds/mds-types": "0.1.0",
     "request": "2.88.0",
     "request-promise": "4.2.4"
   }
