--- a/packages/mds-native/package.json
+++ b/packages/mds-native/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mds/mds-native",
   "description": "MDS Native Data Feed",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "City of Los Angeles",
   "license": "Apache-2.0",
   "main": "dist/index.js",
@@ -17,16 +17,16 @@
     "watch:exec": "yarn build && ts-node"
   },
   "dependencies": {
-    "express": "4.17.1",
-    "@mds/mds-api-helpers": "0.1.3",
-    "@mds/mds-api-server": "0.1.3",
-    "@mds/mds-db": "0.1.3",
-    "@mds/mds-logger": "0.1.3",
-    "@mds/mds-providers": "0.1.3",
-    "@mds/mds-types": "0.1.0",
-    "@mds/mds-utils": "0.1.3"
+    "@mds/mds-api-helpers": "^0.1.4",
+    "@mds/mds-api-server": "^0.1.4",
+    "@mds/mds-db": "^0.1.4",
+    "@mds/mds-logger": "^0.1.4",
+    "@mds/mds-providers": "^0.1.4",
+    "@mds/mds-types": "^0.1.1",
+    "@mds/mds-utils": "^0.1.4",
+    "express": "4.17.1"
   },
   "devDependencies": {
-    "@mds/mds-test-data": "0.1.3"
+    "@mds/mds-test-data": "^0.1.4"
   }
 }
