--- a/packages/mds-policy/package.json
+++ b/packages/mds-policy/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mds/mds-policy",
   "description": "MDS Policy API",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "licence": "Apache-2.0",
   "engineStrict": true,
   "engines": {
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@hapi/joi": "15.1.0",
+    "@mds/mds-api-server": "^0.1.4",
+    "@mds/mds-db": "^0.1.4",
+    "@mds/mds-logger": "^0.1.4",
+    "@mds/mds-providers": "^0.1.4",
+    "@mds/mds-types": "^0.1.1",
+    "@mds/mds-utils": "^0.1.4",
     "express": "4.17.1",
     "joi-to-json-schema": "5.1.0",
-    "@mds/mds-api-server": "0.1.3",
-    "@mds/mds-db": "0.1.3",
-    "@mds/mds-logger": "0.1.3",
-    "@mds/mds-providers": "0.1.3",
-    "@mds/mds-types": "0.1.0",
-    "@mds/mds-utils": "0.1.3",
     "uuid": "3.3.2"
   },
   "main": "dist/index.js",
