--- a/packages/mds-provider/package.json
+++ b/packages/mds-provider/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mds/mds-provider",
   "description": "MDS Provider implementation to pair with MDS Agency",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "author": "City of Los Angeles",
   "license": "Apache-2.0",
   "main": "dist/index.js",
@@ -18,22 +18,22 @@
     "watch:exec": "yarn build && ts-node"
   },
   "dependencies": {
+    "@mds/mds-api-helpers": "^0.1.4",
+    "@mds/mds-api-server": "^0.1.4",
+    "@mds/mds-cache": "^0.1.4",
+    "@mds/mds-db": "^0.1.4",
+    "@mds/mds-logger": "^0.1.4",
+    "@mds/mds-providers": "^0.1.4",
+    "@mds/mds-stream": "^0.1.4",
+    "@mds/mds-types": "^0.1.1",
+    "@mds/mds-utils": "^0.1.4",
     "express": "4.17.1",
     "ladot-service-areas": "0.1.3",
-    "@mds/mds-api-helpers": "0.1.3",
-    "@mds/mds-api-server": "0.1.3",
-    "@mds/mds-cache": "0.1.3",
-    "@mds/mds-db": "0.1.3",
-    "@mds/mds-logger": "0.1.3",
-    "@mds/mds-providers": "0.1.3",
-    "@mds/mds-stream": "0.1.3",
-    "@mds/mds-types": "0.1.0",
-    "@mds/mds-utils": "0.1.3",
     "url": "0.11.0",
     "uuid": "3.3.2",
     "yargs": "13.3.0"
   },
   "devDependencies": {
-    "@mds/mds-test-data": "0.1.3"
+    "@mds/mds-test-data": "^0.1.4"
   }
 }
