--- a/packages/mds-providers/package.json
+++ b/packages/mds-providers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mds/mds-providers",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Mobility Data Specification provider details",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -18,6 +18,6 @@
     "test:unit": "exit 0"
   },
   "dependencies": {
-    "@mds/mds-types": "0.1.0"
+    "@mds/mds-types": "^0.1.1"
   }
 }
