--- a/packages/mds-stream/package.json
+++ b/packages/mds-stream/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mds/mds-stream",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Mobility Data Specification stream interface",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,10 +11,10 @@
   "author": "City of Los Angeles",
   "license": "ISC",
   "dependencies": {
+    "@mds/mds-logger": "^0.1.4",
+    "@mds/mds-types": "^0.1.1",
     "bluebird": "3.5.5",
     "flat": "4.1.0",
-    "@mds/mds-logger": "0.1.3",
-    "@mds/mds-types": "0.1.0",
     "node-gzip": "1.1.2",
     "redis": "2.8.0"
   },
